Full Search Logic; took so long ong

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".SlideshowActivity">
         </activity>
+        <activity
+            android:name=".SearchActivity">
+        </activity>
     </application>
 
 </manifest>
